--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,15 @@
   <header>
     <h1>Luigi Brugugnoli</h1>
     <p>Estudante de Desenvolvimento de Sistemas, aberto a novas oportunidades.</p>
+ 
+  
     <img src="luigi.jpg" alt="Foto de Luigi Brugugnoli" width="270px" height="320px">
   </header>
 
-  <section>
+  <section id="um">
     <h2>Sobre Mim</h2>
     <p>Meu nome é Luigi Brugugnoli e atualmente estudo Desenvolvimento de Sistemas na ETEC Albert Einstein e no Instituto da Oportunidade Social. Desde cedo tenho paixão pela tecnologia e por entender como os sistemas funcionam, o que me levou a escolher essa área para crescer profissionalmente.</p>
-    <p>No meu percurso acadêmico, aprendi a importância de não somente programar, mas também de solucionar problemas, trabalhar em equipe e me adaptar às mudanças rápidas do setor de tecnologia.</p>
+    <p>No meu percurso, aprendi a importância de não somente programar, mas também de solucionar problemas, trabalhar em equipe e me adaptar às mudanças rápidas do setor de tecnologia.</p>
     <p>Estou sempre buscando aprender novas tecnologias e aprimorar minhas habilidades para estar preparado para os desafios do mercado de trabalho e contribuir com soluções eficientes e criativas.</p>
   </section>
 
