--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
       <li><b>Java:</b> Programação orientada a objetos e desenvolvimento de aplicações back-end.</li>
       <li><b>React:</b> Desenvolvimento de interfaces dinâmicas para aplicações web, com foco em componentes reutilizáveis e responsividade.</li>
       <li><b>JavaScript:</b> Linguagem essencial para front-end, com experiência em manipulação do DOM e lógica de programação.</li>
-      <li><b>HTML:</b> Estruturação de páginas web usando semanticamente as tags corretas para acessibilidade e organização.</li>
+      <li><b>HTML5:</b> Estruturação de páginas web usando semanticamente as tags corretas para acessibilidade e organização.</li>
       <li><b>CSS:</b> Estilização intermediária para tornar os sites visualmente agradáveis.</li>
       <li><b>Node.js:</b> Criação de servidores e APIs para aplicações web, trabalhando com JavaScript no back-end.</li>
     <li><b>SQL:</b> Manipulação e gerenciamento de bancos de dados relacionais para armazenamento eficiente de informações.</li>
@@ -53,7 +53,7 @@
     <h2>Contato</h2>
     <p>Se quiser entrar em contato comigo para saber mais ou propor algum projeto, fique à vontade para usar os contatos abaixo:</p>
     <ul>
-      <li>Email: luigitrintoni@gmail.com</li>
+      <li>E-mail: luigitrintoni@gmail.com</li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/luigibrugs" target="_blank" rel="noopener">linkedin.com/in/luigibrugs</a></li>
       <li>GitHub: <a href="https://github.com/luigibrugs" target="_blank" rel="noopener">github.com/luigibrugs</a></li>
     </ul>
